--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,9 +43,11 @@ dependencies:
   firebase_auth: ^5.5.1
   mailer: ^6.4.1
   url_launcher: ^6.3.1
-  http: ^1.3.0
   timezone: ^0.10.0
   pin_code_fields: ^8.0.1
+  intl: ^0.20.2
+  http: ^1.3.0
+  html: ^0.15.5
 
 dev_dependencies:
   flutter_test:
@@ -73,6 +75,12 @@ flutter:
     - assets/on_time.jpg
     - assets/price.jpg
     - assets/go_anywhere.jpg
+    - assets/curse.jpg
+    - assets/gold.jpg
+    - assets/usd.jpg
+    - assets/eur.jpg
+    - assets/rub.jpg
+    - assets/kgs.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
