--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,17 @@ dependencies:
   intl: ^0.20.2
   http: ^1.3.0
   html: ^0.15.5
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  axios_package: ^0.0.3
+  firebase_messaging: ^15.2.6
+  flutter_local_notifications: ^19.2.1
+  workmanager: ^0.5.2
+  xml: ^6.5.0
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.15
+  path_provider: ^2.1.5
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
@@ -81,6 +92,7 @@ flutter:
     - assets/eur.jpg
     - assets/rub.jpg
     - assets/kgs.jpg
+    - assets/nonebook.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
